# Resume-Generator

./: .env.docker  .env.example  .gitignore  ADMIN_SETUP_GUIDE.md  API_MIGRATION.md  ARCHITECTURE.md  DOCKER_DEPLOYMENT.md  ENV_SETUP.md  JOB_SCRAPING_GUIDE.md  JobAlertAI_PRD.md  deploy.sh  docker-compose.yml  verify-setup.sh
backend/: DEPLOYMENT_INGESTION.md  Dockerfile  README.md  docker-compose.yml  exec_loop.sh  main.py  pyproject.toml  simple_poller.py  start_celery.sh  stop_celery.sh  test_email.py  test_resume.py
backend/app/: config.py  database.py  main.py  routes.py
backend/app/controllers/: admin_controller.py  auth_controller.py  job_controller.py  profile_controller.py  resume_controller.py
backend/app/middlewares/: __init__.py  admin_middleware.py  auth_middleware.py
backend/app/models/: __init__.py  auth.py  profile.py  response.py
backend/app/schemas/: __init__.py  user.py
backend/app/services/: admin_service.py  auth_service.py  email_service.py  job_service.py  llm_service.py  matching_service.py  pdf_service.py  pdf_service_weasyprint.py.bak  profile_service.py  resume_service.py  storage_service.py
backend/app/services/ingestion/: normalizer.py  url_parser_service.py  xml_feed_service.py
backend/app/workers/: celery_worker.py
backend/scripts/: check_users.py  debug_matching.py  ensure_user_role_field.py  init_admin.py  migrate_resume_ats_scores.py  migrate_role_field.py  populate_feeds.py  regenerate_pdf.py  run_matching.py  setup_s3.py  test_admin_init.py  test_presigned_url.py  test_startup.py
frontend/: Dockerfile  README.md  (+4 more)
(+34 files in other folders)
